Agregar ejemplos de funcionse

--- a/notebooks/01-funciones.ipynb
+++ b/notebooks/01-funciones.ipynb
@@ -210,17 +210,16 @@
         "\n",
         "Python nos permite escribir nuestras propias funciones. Recordemos que una funcion es algo donde nosotros mandamos algo y recibimos otra cosa.\n",
         "\n",
-        "Para declarar una función utilizaremos la palabra `def` (DEfinir Función) seguida del nombre de nuestra función (<nombre_funcion>)y un paréntesis con parámetros (los cuales son opcionales).\n",
-        "\n",
-        "\n",
-        "Finalmente con la palabra `return` especificamos el valor que retorna la función.\n",
+        "* Para declarar una función utilizaremos la palabra `def` (DEfinir Función) seguida del nombre de nuestra función (<nombre_funcion>), un paréntesis con parámetros (los cuales son opcionales) y dos puntos `:`.\n",
+        "* Luego de los dos puntos `:` se encuentra el cuerpo de la función. **Noten la sangría**, es importante que el cuerpo de la función tenga sangría (por defecto 4 espacios), y que todo se encuentre al mismo nivel.\n",
+        "* Finalmente con la palabra `return` especificamos el valor que retorna la función. Puede ser una variable que definamos dentro de la función o una expresión (una suma, un producto, etc).\n",
         "\n",
         "``` python\n",
-        "def <nombre_funcion>(<parámetro_1>,<parámetro_2>):\n",
+        "def <nombre_funcion>(<parámetro_1>,<parámetro_2>):      \n",
         "    # aquí pueden pasar cosas\n",
         "    return <algo>\n",
         "```\n",
-        "Un detalle importante es que todo el bloque de la función debe estar con sangría, o con espacio (a esto se le llama indentación generalmente) para funcionar. En caso de que no dejemos este espacio (o que cada linea deje una cantidad de espacios diferentes) tendremos un error.\n",
+        "**Muy importante** No olvidar que todo el bloque de la función debe estar con sangría, o con espacio (a esto se le llama indentación generalmente) para funcionar. En caso de que no dejemos este espacio (o que cada linea deje una cantidad de espacios diferentes) tendremos un error.\n",
         "\n",
         "Veamos un ejemplo sencillo, donde creamos una función que devuelve un número al cuadrado."
       ]
@@ -317,6 +316,44 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Ejemplo Una función un poco más compleja"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "90.0\n",
+            "100.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Esta función calcula el precio con descuento a partir de un precio original\n",
+        "# y el porcentaje de descuento\n",
+        "def precio_con_descuento(precio_original, porcentaje):\n",
+        "    # el descuento es el precio original por el porcentaje\n",
+        "    descuento = precio_original * porcentaje/100 \n",
+        "\n",
+        "    # el precio final es el precio original menos el descuento\n",
+        "    precio_final = precio_original - descuento \n",
+        "\n",
+        "    # finalmente regresamos el precio final\n",
+        "    return precio_final \n",
+        "\n",
+        "print(precio_con_descuento(100, 10)) # debería ser 90\n",
+        "print(precio_con_descuento(200, 50)) # debería ser 100"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### El return es opcional\n",
         "\n",
         "La palabra `return` es opcional. Si no la escribo entonces mi función no me devuelve nada (me devuelve un valor llamado `None`). Por ejemplo la siguiente función imprime un mensaje de saludo, pero no regresa ese mensaje (solo lo muestra)"
@@ -405,6 +442,121 @@
         "\n",
         "saludar(\"San Martin Campeón\")\n",
         "saludar()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "85.0\n",
+            "80.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Volvemos a nuestra función anterior pero esta vez el porcentaje tiene un valor por defecto\n",
+        "\n",
+        "def precio_con_descuento(precio_original, porcentaje=15):\n",
+        "    descuento = precio_original * porcentaje/100 \n",
+        "    precio_final = precio_original - descuento \n",
+        "    return precio_final \n",
+        "\n",
+        "# cuando no escribo el porcentaje la función usa el valor por defecto\n",
+        "print(precio_con_descuento(100)) # debería ser 85\n",
+        "\n",
+        "# pero aún si le paso un valor, usa ese valor\n",
+        "print(precio_con_descuento(100, 20)) # debería ser  80"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Errores Comunes al escribir funciones\n",
+        "\n",
+        "Algunos errores que se van a encontrar al escribir una función son los siguientes:\n",
+        "\n",
+        "1) Olvidarse de los dos puntos `:`. El siguiente código no funcionará porque faltan los dos puntos al definir la función:\n",
+        "\n",
+        "``` python\n",
+        "def suma(a, b) # <- aquí debería ir un \":\"\n",
+        "    return a + b\n",
+        "```\n",
+        "\n",
+        "2) No dejar espacio en el cuerpo de la función o dejar diferentes cantidades de espacios\n",
+        "\n",
+        "``` python\n",
+        "def suma(a, b):\n",
+        "    resultado = a + b\n",
+        "      return a + b # aquí hay dos espacios extra al inicio\n",
+        "```\n",
+        "\n",
+        "``` python\n",
+        "def suma(a, b):\n",
+        "     resultado = a + b # aquí hay un espacio extra al inicio\n",
+        "    return a + b \n",
+        "```\n",
+        "\n",
+        "El codigo correcto sería así:\n",
+        "\n",
+        "``` python\n",
+        "def suma(a, b):\n",
+        "    resultado = a + b\n",
+        "    return a + b \n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Pasar argumentos con nombre\n",
+        "\n",
+        "Una forma de llamar a nuestra función es así: `precio_con_descuento(100, 20)`, donde 100 será el `precio_original` y 20 será el `porcentaje`.\n",
+        "\n",
+        "Otra forma de llamar a nuestra función es decirle explicitamente lo que le estamos pasando:\n",
+        "\n",
+        "``` python\n",
+        "print(precio_con_descuento(precio_original=100, porcentaje=15)) # 85\n",
+        "```\n",
+        "\n",
+        "E incluso podemos cambiar el orden de los argumentos\n",
+        "\n",
+        "``` python\n",
+        "print(precio_con_descuento(porcentaje=15, precio_original=100)) # 85\n",
+        "``` "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "85.0\n",
+            "85.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "def precio_con_descuento(precio_original, porcentaje=15):\n",
+        "    descuento = precio_original * porcentaje/100 \n",
+        "    precio_final = precio_original - descuento \n",
+        "    return precio_final \n",
+        "\n",
+        "# puedo darle los valores en orden establedido por la función (precio y porcentaje):\n",
+        "print(precio_con_descuento(100, 15))\n",
+        "\n",
+        "# pero también puedo escribir el nombre de los parámetros:\n",
+        "print(precio_con_descuento(precio_original=100, porcentaje=15)) "
       ]
     },
     {
