--- a/notebooks/00-sintaxis-basica-y-variables.ipynb
+++ b/notebooks/00-sintaxis-basica-y-variables.ipynb
@@ -1192,6 +1192,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Qué pasa si queremos poner comillas dentro de nuestro texto?"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {},
@@ -1206,6 +1213,7 @@
         }
       ],
       "source": [
+        "# Esto da error:\n",
         "print(\"Soy \"simpático\")"
       ]
     },
@@ -1223,6 +1231,7 @@
         }
       ],
       "source": [
+        "# Para imprimir unas comillas debo usar la barra hacia atras \\ (no esta barra: /)\n",
         "print(\"Soy \\\"simpático\\\"\")"
       ]
     },
