--- a/notebooks/02-metodos-de-cadenas.ipynb
+++ b/notebooks/02-metodos-de-cadenas.ipynb
@@ -679,7 +679,9 @@
         }
       ],
       "source": [
-        "print(help(str)) # str significa string (o cadena)"
+        "print(help(str)) # str significa string (o cadena)\n",
+        "# El resultado es un texto muy largo, y debemos \n",
+        "# ignorar los métodos que inician y terminan con doble guion bajo __"
       ]
     },
     {
