Agregar comparación strings

--- a/notebooks/03-control-de-flujo.ipynb
+++ b/notebooks/03-control-de-flujo.ipynb
@@ -15,7 +15,24 @@
     "\n",
     "### Operadores de Comparación\n",
     "\n",
-    "Los operadores de comparación nos resultarán bastante familiares. Una comparación se realiza entre dos objetos, y si la expresión es válida el resultado será un booleano (True o False)"
+    "Los operadores de comparación nos resultarán bastante familiares. Una comparación se realiza entre dos objetos, y el resultado será un booleano(`bool`). Un booleano puede tener solo dos valores: `True` (Verdadero) o `False` (Falso)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(True))"
    ]
   },
   {
@@ -134,6 +151,33 @@
    "source": [
     "# Mientras que != implica desigualdad\n",
     "print(12 != 12.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Podemos comparar strings para ver el orden alfabético\n",
+    "print(\"avellaneda\" < \"zelaya\") # la a está antes que la z\n",
+    "\n",
+    "# En caso de ser iguales en las primeras letras, comparamos las siguientes\n",
+    "print(\"abc\" < \"abd\") # la c está antes que la d\n",
+    "\n",
+    "# Y en caso de que una sea igual a la otra, pero un poco más larga\n",
+    "# la más corta será menor\n",
+    "print(\"hola\" < \"holas\") # hola es más corto que holas"
    ]
   },
   {
