Mencionar split() y join()

--- a/notebooks/04-estructuras-de-datos.ipynb
+++ b/notebooks/04-estructuras-de-datos.ipynb
@@ -658,6 +658,82 @@
     "\n",
     "type(tupla)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Listas a Strings, y Strings a Listas\n",
+    "\n",
+    "Existen dos métodos de strings que son útiles para convertir una lista en una string, o separar una string en elementos de una lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3', '4']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"1,2,3,4\".split(\",\")  # Obtengo una lista, separando a partir de las comas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', 'd']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"a-b-c-d\".split(\"-\")  # Obtengo una lista, separando a partir de los guiones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tierra-aire-fuego-agua'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"-\".join([\"tierra\", \"aire\", \"fuego\", \"agua\"]) # junto los elementos de la lista colocando un guion en medio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
