--- a/ejercicios/semana-02/ejercicios-semana-02.ipynb
+++ b/ejercicios/semana-02/ejercicios-semana-02.ipynb
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 2.6) Número Primo\n",
+    "### Ejercicio 2.7) Número Primo\n",
     "\n",
     "Un número par es un número que se puede dividir en dos (es decir que al dividir el resto es 0, o que el resultado no es un decimal sino un valor entero). Preguntar si un número es par es lo mismo que preguntar si ese número se puede dividir por 2. Veamos el siguiente código para tener como ejemplo:\n",
     "\n",
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 2.4) Primos\n",
+    "### Ejercicio 2.8) Primos\n",
     "\n",
     "Escribamos una función llamada `imprimir_primos(n)` que reciba un entero `n` e imprima todos los números desde el 1 hasta ese número.\n",
     "\n",
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio Desafio. Factorial\n",
+    "### Ejercicio **Desafio**. Factorial\n",
     "\n",
     "Calculemos el factorial. Escriba una función llamada `factorial(n)` que calcule el factorial del entero `n`.\n",
     "\n",
