Actualizar mensaje ejercicios semana 03

--- a/ejercicios/semana-03/ejercicios-semana-03.ipynb
+++ b/ejercicios/semana-03/ejercicios-semana-03.ipynb
@@ -6,17 +6,7 @@
    "source": [
     "# Ejercicios Cuarta Semana\n",
     "\n",
-    "Tenemos dos tipos de ejercicios. En la primera parte hay pequeños códigos que no \n",
-    "funcionan por algún error o por la falta de algo. Su tarea es encontrar el error \n",
-    "y hacer que el código se ejecute correctamente. Para eso copien cada código a un \n",
-    "archivo de python y prueben ejecutarlo.\n",
-    "\n",
-    "\n",
-    "En la segunda parte nosotros les vamos a pedir que escriban el código para hacer \n",
-    "algunas tareas específicas.\n",
-    "\n",
-    "No tengan miedo a revisar el material que les pasamos. No es la idea que sepan\n",
-    "todo de memoria.\n"
+    "Ahora todos los ejercicios son para que ustedes los escriban. Mucha suerte!\n"
    ]
   },
   {
@@ -164,13 +154,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[cap1_lovecraft.txt](../../datos/cap1_lovecraft.txt)"
+    "### Ejercicio. Contar palabras de un texto\n",
+    "\n",
+    "Descargue el archivo de texto [cap1_lovecraft.txt](../../datos/cap1_lovecraft.txt), lealo con Python y utilice su función `contar_palabras(texto)` para contar el número de palabras dentro del texto."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
